sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: not found: type Breaks
val mybreaks = new Breaks;
                   ^AlgBubbleSort3:7: error: not found: value breakable
	breakable {
        ^