sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code

import mybreaks.{break, breakable}
val mybreaks = new Breaks;

def bubbleSort3() {
	breakable {
	for (i <- getNombreValeurs()-2 to 0 by -1) {
	
		var inverse = true;
		if (inverse) {
			inverse = false;
			for (j <- 0 to i) {
				if (plusPetit(j+1,j)) {
					echange(j+1,j);
					inverse = true;
				}
			}	
		}break()
	}
	}
}
